[UPDATE 1.2.6] Adding the Dashboard UI

--- a/Public/Stylesheets/mobile.css
+++ b/Public/Stylesheets/mobile.css
@@ -9,7 +9,7 @@ body {
     font-size: var(--textSize);
 }
 #homepage header i,
-#downloads header a {
+#dashboard header a {
     font-size: calc(var(--textSize) * 4);
 }
 #homepage main {
