--- a/Public/Stylesheets/mobile.css
+++ b/Public/Stylesheets/mobile.css
@@ -18,3 +18,27 @@ body {
 #homepage main a {
     font-size: calc(var(--textSize) * 2);
 }
+#dashboard main {
+    margin: calc(var(--percentage) / 100) cacl(var(--percentage) * 0);
+}
+#dashboard main form {
+    width: calc(var(--percentage) * 0.9);
+    margin: calc(var(--percentage) * 0) calc(var(--percentage) / 20);
+    display: block;
+}
+#dashboard main form button {
+    font-size: var(--textSize);
+    margin: calc(var(--percentage) * 0)
+        calc(var(--percentage) / 2 * (253.69 / 288));
+}
+#dashboard main form input {
+    font-size: calc(var(--textSize) * 0.54);
+}
+#dashboard main form input[type="url"] {
+    width: var(--percentage);
+    margin: calc(var(--percentage) / 100) calc(var(--percentage) * 0);
+}
+#dashboard main form input[type="text"] {
+    width: calc(var(--percentage) / 5);
+    margin: calc(var(--percentage) / 100) calc(var(--percentage) * (2 / 5));
+}
